tests/NormalTests/paczka1/small_fuzzy/45772778.err
Error in line 4: aD0DB5z0h S39 69,5
Error in line 10: Dv8t S834 13,8
Error in line 1: MuBxP S834 93,1
